# futures-quant-project

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  launch_workbench.py  pyproject.toml  启动OKX只读诊断.bat  启动OKX只读诊断.ps1  启动量化工作台.bat  启动量化工作台.ps1
configs/: api.changjiang.example.json  api.example.json  api.okx.example.json  backtest.json  backtest_adaptive.json  backtest_adaptive_research_15m.json  backtest_adaptive_research_60m.json  backtest_adaptive_v2.json  backtest_dual_period.json  backtest_ma_pullback.json  backtest_ma_pullback_60m.json  backtest_ma_pullback_safe.json  backtest_ma_pullback_safe_stress_2x3tick.json  backtest_multi.json  contracts.csv  http_history.example.json  okx.env.example  optimization_adaptive.json  optimization_adaptive_v2_staged_15m.json  optimization_adaptive_v2_staged_60m.json  optimization_dual_period.json  optimization_ma_pullback.json  universe.json  universe_domestic_3y.json
docs/: API_INTEGRATION.md  CHANGJIANG_FUTURES_SETUP.md  CTP_GATEWAY_DEVELOPMENT.md  DUAL_PERIOD_WORKBENCH.md  MODEL_RISK.md  OKX_SUBACCOUNT_SETUP.md  POBO_BATCH_IMPORT.md  POBO_HISTORY_IMPORT.md  POBO_REAL_SHORT_SAMPLE_EVALUATION.md  PORTFOLIO_BACKTEST.md  REAL_DATA_ACQUISITION_CHECKLIST.md
tests/: test_adaptive_trend.py  test_adaptive_trend_v2.py  test_backtest.py  test_chinese_presentation.py  test_ctp_gateway.py  test_dashboard_readiness.py  test_dual_period_reversal.py  test_ma_trend_pullback.py  test_okx_history.py  test_okx_rest.py  test_optimization.py  test_pobo.py  test_portfolio_backtest.py  test_scanner.py  test_timeframe.py
(+40 files in other folders)
